--- a/example/.example-usage.js.hbs
+++ b/example/.example-usage.js.hbs
@@ -1,11 +1,13 @@
-var veccal = require('veccal');
+'use strict'
+
+const veccal = require('veccal')
 
 {{#each examples}}
 //------------------------
 // {{name}}
 //------------------------
 {{#each values}}
-console.log(veccal.{{../name}}({{{args}}})); //-> {{result}}
+console.log(veccal.{{../name}}({{{args}}})) //-> {{result}}
 {{/each}}
 
 {{/each}}
